[tool.black]
line-length = 110

 

[tool.poetry]
name = "bitcoin-safe-lib"
version = "1.0.3"
authors = ["andreasgriffin <andreasgriffin@proton.me>"]
license = "GPL-3.0"
readme = "README.md"
description = "Python tools and library"
homepage = "https://github.com/andreasgriffin"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "2.2.1" # error in wine/pyinstaller when increased
pyqt6 = "^6.9.0"
bdkpython ="^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"





[tool.ruff]
target-version = "py310"
line-length = 110
src = ["bitcoin_safe_lib"]

[tool.ruff.lint]
# E+F are defaults; include I for isort-equivalent import sorting and a few handy extras.
select = ["E", "F", "I", "B", "UP"] 
ignore = ["E501"]

[tool.ruff.lint.isort]
# Optionally tune first/third party detection:
known-first-party = ["bitcoin_safe_lib"]


[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ALL"]
"tools/**/*" = ["ALL"]


[tool.ruff.format]
# Ruff formatter is Black-compatible; keep defaults or tweak here.


